--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.username=postgres
 spring.datasource.password=cremosa1
 spring.flyway.enabled=true
 
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resource
 
-spring.flyway.baseline-on-migrate=true
-spring.flyway.url: jdbc:postgresql://localhost:5432/test
-spring.flyway.user:postgres
-spring.flyway.password:cremosa1
+
+spring.jpa.hibernate.ddl-auto=update
